<resources>
    <string name="app_name">Vit_Lib</string>
    <string name="developed_by_nidhi_and_vanieka">developed by Nidhi and Vanieka</string>
    <string name="student">student</string>
    <string name="employee_panel">employee_panel</string>
    <string name="click_here_normal_user">normal user</string>
    <string name="password">password</string>
    <string name="employeeid">employeeid</string>
    <string name="VIT_LIB">VITLIB</string>
    <string name="welcome_to_vit_s_smart_library">Welcome To VIT\'s Smart Library</string>
    <string name="todo">TODO</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="logout" />
    <string name="available_books">Available Books</string>
    <string name="log_out">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="librarian_1">Librarian 1 :</string>
    <string name="name_ms_reema_desai">Name : Ms. Reema Desai</string>
    <string name="mob_1">Mob : 9862745831</string>
    <string name="mail_id_1">Mail Id : reema.desai@vitbhopal.ac.in</string>
    <string name="librarian_2">Librarian 2 :</string>
    <string name="name_mr_shyam_narayan">Name : Mr. Shyam Narayan</string>
    <string name="mob_2">Mob : 9784162587</string>
    <string name="mail_id_2">Mail Id : shyam.narayan@vitbhopal.ac.in</string>
    <string name="faqs">FAQs</string>
    <string name="any_queries">Any queries ?</string>
    <string name="submit">Submit</string>
    <string name="_1_what_is_the_library_timing">1) What is the library timing ?</string>
    <string name="mon_fri_8_30_a_m_to_2_00_p_m">Mon – Fri :- 8:30 a.m. to 2:00 p.m.</string>
    <string name="_3_00_p_m_to_5_00_p_m">3:00 p.m. to 5:00 p.m.</string>
    <string name="sat_8_30_a_m_to_1_00_p_m_sunday_closed">Sat :- 8:30 a.m. to 1:00 p.m. (Sunday closed)</string>
    <string name="_2_for_how_many_days_can_we_issue_the_books">2) For how many days can we issue the books</string>
    <string name="from_library">from library ?</string>
    <string name="_15_days">15 days</string>
    <string name="_3_how_much_fine_is_imposed_for_late_submission">3) How much fine is imposed for late submission</string>
    <string name="of_issued_books">of issued books ?</string>
    <string name="rs_5_per_day_per_book">Rs. 5 per day per book</string>
    <string name="_4_how_many_books_can_we_issue_at_a_time">4) How many books can we issue at a time ?</string>
    <string name="maximum_of_3_books_at_a_time">Maximum of 3 books at a time</string>
    <string name="faq_s">FAQs</string>
</resources>